@@ -1852,12 +1852,8 @@ class WC_Subscriptions_Admin {
 	 */
 	public static function maybe_attach_gettext_callback() {
 
-		if ( is_admin() && function_exists( 'get_current_screen' ) ) {
-			$screen = get_current_screen();
-
-			if ( is_object( $screen ) && 'shop_subscription' === $screen->id ) {
-				add_filter( 'gettext', array( __CLASS__, 'change_order_item_editable_text' ), 10, 3 );
-			}
+		if ( self::is_edit_subscription_page() ) {
+			add_filter( 'gettext', array( __CLASS__, 'change_order_item_editable_text' ), 10, 3 );
 		}
 	}
 
@@ -1868,15 +1864,10 @@ class WC_Subscriptions_Admin {
 	 */
 	public static function maybe_unattach_gettext_callback() {
 
-		if ( is_admin() && function_exists( 'get_current_screen' ) ) {
-			$screen = get_current_screen();
-
-			if ( is_object( $screen ) && 'shop_subscription' === $screen->id ) {
-				remove_filter( 'gettext', array( __CLASS__, 'change_order_item_editable_text' ), 10 );
-			}
+		if ( self::is_edit_subscription_page() ) {
+			remove_filter( 'gettext', array( __CLASS__, 'change_order_item_editable_text' ), 10 );
 		}
 	}
-
 
 	/**
 	* When subscription items not editable (such as due to the payment gateway not supporting modifications),
@@ -1892,6 +1883,7 @@ class WC_Subscriptions_Admin {
 				break;
 
 			case 'To edit this order change the status back to "Pending"':
+			case 'To edit this order change the status back to "Pending payment"':
 				$translated_text = __( 'This subscription is no longer editable because the payment gateway does not allow modification of recurring amounts.', 'woocommerce-subscriptions' );
 				break;
 		}
@@ -2249,5 +2241,25 @@ class WC_Subscriptions_Admin {
 		}
 
 		return $delete_variations;
+	}
+
+	/**
+	 * Check if the current page is the Edit Subscription page
+	 *
+	 * @return bool True if the current page is the Edit Subscription page
+	 *
+	 * @since 7.5.0
+	 */
+	private static function is_edit_subscription_page() {
+		if ( ! is_admin() || ! function_exists( 'get_current_screen' ) ) {
+			return false;
+		}
+
+		$screen = get_current_screen();
+		if ( ! is_object( $screen ) ) {
+			return false;
+		}
+
+		return wcs_get_page_screen_id( 'shop_subscription' ) === $screen->id;
 	}
 }
